# problem_gen_poc

./: README.md  pyproject.toml
src/: Dockerfile  app.py  docker-compose.yaml
src/data/: problems.py
src/logic/: problem_generate.py
src/views/: problems.py
