[tool.poetry]
name = "problem-gen-poc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "problem_gen_poc"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.14.0"
sympy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
